# CrowdNav

./: checkinglist  depthNN.py  environments  paper_structure.odt  r200.urdf.xacro  readme.md  references
RGB_lidar/: typescript
RohansNN/: CMakeLists.txt  readMe
crowdmove/: CMakeLists.txt  readMe
stage_ros/: CMakeLists.txt  LICENSE  README.md  interfaces  package.xml
stage_ros/launch/: jackal_multi.launch  jackal_multi_cam.launch  turtlebot_multi.launch
stage_ros/launch/include/: turtlebot_base.launch
stage_ros/launch/include/jackal_cam/: jackal_base.launch
stage_ros/launch/include/jackal_multi/: jackal_base.launch
stage_ros/models/: cam.xacro
stage_ros/models/hokuyo/: hokuyo.urdf.xacro
stage_ros/models/jackals/: jackal_cam_depth.urdf.xacro
stage_ros/models/turtlebot2/: turtlebot.urdf.xacro
stage_ros/models/turtlebot2/kobuki/: kobuki.urdf.xacro  kobuki_gazebo.urdf.xacro
stage_ros/models/turtlebot2/sensors/: hokuyo.urdf.xacro  r200.urdf.xacro
stage_ros/msg/: ActionObs.msg  Actions.msg  GazeboData.msg  GoalObs.msg  ImageObs.msg  Transition.msg  Transitions.msg
stage_ros/scripts/: data_transfer.py  multi_robot_ppo.py  scenarios.py  stage_env.py  stage_env_part.py  subscriber.py
stage_ros/scripts/ppo/: agent.py
stage_ros/scripts/ppo/model/: last_act_2.npz  last_act_3.npz
stage_ros/scripts/ppo/summary/2019-04-12-16-21-52/: events.out.tfevents.1555100512.jing-Inspiron-5577
stage_ros/scripts/ppo/summary/2019-04-14-00-29-16/: events.out.tfevents.1555216156.jing-Inspiron-5577
stage_ros/scripts/ppo/summary/2019-04-14-00-40-55/: events.out.tfevents.1555216855.jing-Inspiron-5577
stage_ros/scripts/ppo/summary/2019-07-27-13-59-08/: events.out.tfevents.1564250348.jing-Inspiron-5577
stage_ros/scripts/ppo/summary/2019-07-27-15-06-17/: events.out.tfevents.1564254377.jing-Inspiron-5577
stage_ros/scripts/ppo/summary/2019-07-27-15-11-15/: events.out.tfevents.1564254676.jing-Inspiron-5577
stage_ros/scripts/ppo/summary/2019-07-27-15-23-25/: events.out.tfevents.1564255405.jing-Inspiron-5577
stage_ros/scripts/ppo/summary/2019-07-27-15-25-42/: events.out.tfevents.1564255542.jing-Inspiron-5577
stage_ros/scripts/ppo/summary/2019-07-27-15-27-14/: events.out.tfevents.1564255634.jing-Inspiron-5577
stage_ros/scripts/ppo/summary/2019-07-27-15-28-29/: events.out.tfevents.1564255709.jing-Inspiron-5577
stage_ros/scripts/ppo/summary/2019-07-27-15-32-13/: events.out.tfevents.1564255933.jing-Inspiron-5577
stage_ros/scripts/ppo/summary/2019-08-04-14-20-08/: events.out.tfevents.1564942808.jing-Inspiron-5577
stage_ros/scripts/test/: Untitled.ipynb  env_set.py  ipc_receive.py  pose_test.py  stage_env_org.py  subscribe.py  subscriber (copy).py  test_sub1.py  test_sub2.py
stage_ros/scripts/test/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
stage_ros/src/: drl_stageros.cpp  stageros.cpp
stage_ros/srv/: UpdateGazebo.srv  UpdateStage.srv
stage_ros/test/: subscribe.py
stage_ros/world/: empty.yaml  env_10.world  env_10_multi_robot.world  env_10_obstacle.world  env_12.world  env_14.world  env_15_obstacle.world  env_20.world  env_2_mit.world  env_30.world  env_4.world  env_40.world  env_50.world  env_58.world  env_6.world  env_8.world  env_8_obstacle.world  env_big.world  env_corridor.world  env_cross_road.world  env_face_car.world
(+10366 files in other folders)
